--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,7 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+#Code Coverage Report Added files
+coverage
+results.xml
